--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-    /* font-style: italic; */
     font-size: 28px;
     margin: 0;
     line-height: 40px;
@@ -17,12 +16,8 @@ h2 {
     line-height: 35.2px;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-    margin-bottom: 20px;
-    margin-top: 35px;
-}
-
-h2.is-center {
-    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 20px;
 }
 
 h3 {
@@ -45,18 +40,16 @@ h3 {
 }
 
 .graphic__subhed {
-    margin: 0
-    margin-bottom: 8px;
+    font-family: 'Roboto', sans-serif;
+    color: #000;
+    margin-bottom: 10px;
     text-align: left;
+    font-size: 18px;
 }
 
-.graphic__subhed,
 .graphic__caption {
     font-family: 'Roboto', sans-serif;
-    color: #666;
-}
-
-.graphic__caption {
+    color: #808080;
     font-size: 14px;
     margin: 0 auto;
     padding-top: 8px;
