--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 
 h2 {
     font-size: 21px;
-    line-height: 35.2px;
+    line-height: 26px;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     margin-bottom: 5px;
@@ -42,14 +42,16 @@ h3 {
 .graphic__subhed {
     font-family: 'Roboto', sans-serif;
     color: #000;
+    font-weight: 200;
     margin-bottom: 10px;
     text-align: left;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .graphic__caption {
     font-family: 'Roboto', sans-serif;
     color: #808080;
+    font-weight: 200;
     font-size: 14px;
     margin: 0 auto;
     padding-top: 8px;
